--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,2 +1,33 @@
 name: CI-CD for Iris model
 
+on:
+  push:
+  branches:
+  - main
+
+jobs:
+  build-and-train:
+  runs-on: ubuntu-latets
+  steps:
+    - name: checkout code 
+      uses: actions/checkout@v4
+
+    - name: Set up Python 
+      uses: actions/setup-python@v5
+      with:
+      python-version: "3.13"
+
+    - name : Install dependencies
+      run: |
+        python -m oio install --upgrade pip
+        pip  install -r requirments.txt
+
+    - name: Train model-
+      run: python example1_train.py
+
+
+      # - name: Run Flask server(test)
+      #   run: |
+      #   nohup python app.py &
+      #   sleep 10 
+      #   curl -X POST http://127.0.0.1:5000/predict \
