--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name : Install dependencies
       run: |
-        python -m oio install --upgrade pip
+        python -m pip install --upgrade pip
         pip  install -r requirments.txt
 
     - name: Train model-
