--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,18 +9,18 @@ jobs:
   build-and-train:
   runs-on: ubuntu-latest
   steps:
-    - name: checkout code 
+    - name: Checkout code 
       uses: actions/checkout@v4
 
     - name: Set up Python 
       uses: actions/setup-python@v5
       with:
-      python-version: "3.13"
+        python-version: "3.13"
 
     - name : Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip  install -r requirments.txt
+        pip  install -r requirements.txt
 
     - name: Train model-
       run: python example1_train.py
